test/good/lambdas/lambda01.px

func f(Int->String g, Int n) String def
    return g(n) * 2

print f(lambda x: x.toString(), 7)
