test/bad/functions/lambda01.px

func f(Int->String g) Int->String def
    return g

f(lambda x: x)
